Remove body line-height change to prevent vertical alignment issues

--- a/common/styles/globalStyles.css
+++ b/common/styles/globalStyles.css
@@ -27,7 +27,6 @@ html {
 }
 
 body {
-  line-height: 1.5;
   hyphens: none;
   margin: 0;
   min-width: 300px;
